# equation-surface-modeller

./: .gitignore  README.md  pyproject.toml
examples/: visualization_example.py
src/calc/: dual_contouring.py  equations.py  functions.py
src/calc/ut/: test_equations.py  test_functions.py
src/ui/: app.py
src/view/: mesh.py  plot.py  plot_view.py
